# actor-zeta

examples/pregel/: pagerank.cpp  shortest_path.cpp
header/actor-zeta/impl/pregel/: bsp_coordinator.ipp  graph_serde.ipp  message_combiner.ipp  pregel_actor.ipp  pregel_context.ipp
header/actor-zeta/pregel/: bsp_coordinator.hpp  graph_serde.hpp  message_combiner.hpp  pregel_actor.hpp  pregel_context.hpp  pregel_types.hpp
test/: CMakeLists.txt
test/pregel/: CMakeLists.txt  test_pregel.cpp
